--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ limitations under the License.
 
 <body>
     <h1>Hello, world</h1>
+    <h2>Make some chanegs here...</h2>
 
     <button onclick="fetchMessage()">Fetch Message</button>
     <p id="message">Click on the button to fetch the message.</p>
